--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,38 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     >
+    <meta name="google-site-verification" content="SQFNJ8KHfSi2Qop6YTjtLk-kNc683jve58ZPiEOLIgg"/>
+
 
     <title>Dennis Mechanic Shop</title>
+    <!-- LocalBusiness structured data -->
+    <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"AutoRepair",
+      "name":"Dennis General Mechanic",
+      "image":"https://dennisgeneralmechanic.netlify.app/images/services/logo.png",
+      "telephone":"+1-240-764-7004",
+      "address":{
+        "@type":"PostalAddress",
+        "streetAddress":"4720 Baltimore Ave",
+        "addressLocality":"Hyattsville",
+        "addressRegion":"MD",
+        "postalCode":"20781",
+        "addressCountry":"US"
+      },
+      "url":"https://dennisgeneralmechanic.netlify.app/",
+      "sameAs":[
+        "https://www.facebook.com/share/1G8PzHNPue/?mibextid=wwXIfr"
+      ],
+      "openingHoursSpecification":[{
+        "@type":"OpeningHoursSpecification",
+        "dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+        "opens":"08:00",
+        "closes":"18:00"
+      }]
+    }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
